--- a/sample.html
+++ b/sample.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 color="red">This is h1 Heading</h1>
+    <h1><font color="red">This is h1 Heading</font></h1>
 </body>
 </html>
