adding extrenal css file

--- a/sample.html
+++ b/sample.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><font color="red">This is h1 Heading</font></h1>
+    <h2>This is Changed Heading</h2>
 </body>
 </html>
