adding table and css

--- a/sample.html
+++ b/sample.html
@@ -9,5 +9,22 @@
 <body>
     <h1><font color="red">This is h1 Heading</font></h1>
     <h2>This is Changed Heading</h2>
-</body>
+    <table>
+        <tr>
+          <th>Company</th>
+          <th>Contact</th>
+          <th>Country</th>
+        </tr>
+        <tr>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td>Centro comercial Moctezuma</td>
+          <td>Francisco Chang</td>
+          <td>Mexico</td>
+        </tr>
+      </table>
+    </body>
 </html>
