--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="sample.js"></script>
 </head>
 <body>
     <h1><font color="red">This is h1 Heading</font></h1>
@@ -26,5 +27,6 @@
           <td>Mexico</td>
         </tr>
       </table>
+      <button onclick="myFunc()">Click me</button>
     </body>
 </html>
